静态文件浏览器缓存问题

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c84b303c5acc2d460ab6",
+    "/css/app.css": "/css/app.css?id=214653bec98a6dbafd1e"
 }
