生成用户认证代码

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "overtrue/easy-sms": "^1.1"
+        "overtrue/easy-sms": "^1.1",
+        "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
