--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "mews/captcha": "~2.0",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0"
     },
