--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,19 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# dingo config
+API_STANDARDS_TREE=prs
+API_SUBTYPE=larabbs
+API_PREFIX=api
+API_VERSION=v1
+API_DEBUG=true
+
+#腾讯云SMS:
+QCLOUD_SDK_APP_ID=
+QCLOUD_APP_KEY=
+QCLOUD_SIGN_NAME=
+
+#百度通用翻译
+BAIDU_TRANSLATE_APPID=
+BAIDU_TRANSLATE_KEY=
