--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "dingo/api": "2.0.0-beta1",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "~6.3",
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.5",
         "laravel/framework": "5.7.*",
@@ -18,7 +19,8 @@
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/easy-sms": "^1.1",
-        "overtrue/laravel-lang": "~3.0"
+        "overtrue/laravel-lang": "~3.0",
+        "overtrue/pinyin": "~3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.2",
