--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.5",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "~1.3",
         "laravel/tinker": "^1.0",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
-        "overtrue/pinyin": "~3.0"
+        "overtrue/pinyin": "~3.0",
+        "predis/predis": "~1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.2",
